<resources>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_name">Законодательные акты</string>
    <string name="main_activity_lang">Бош саҳифа</string>
    <string name="lang_activity_lang">Тилни танланг</string>
    <string name="share_activity_lang">Улашиш</string>
    <string name="about_activity_lang">Биз хақимизда</string>
    <string name="info_activity_lang">Дастур хақида малумот</string>
    <string name="rate_activity_lang">Бизни баҳолаш</string>
    <string name="other_activity_lang">Бошқа дастурлар</string>
    <string name="connect_with_us_lang">Биз билан боғланиш</string>
    <string name="saved_acts">Сақлангаллар</string>
    <string name="saved_date">Маълумотлар базасига танланган маълумот кўшилди</string>
    <string name="deleted_date">Маълумотлар базасидан танланган маълумот ўчирилди</string>
    <string name="about">“Moliya studiyasi” – бухгалтерия ҳисобини ўргатишга ва шу билан биргаликда бухгалтерия хизматларини амалга оширишга ихтисослашган ўқув муассасаси. Ўқув курсимизда сиз 4 ой мобайнида бухгалтерияни 0 дан бошлаб балансга қадар ўрганиш имкониятини қўлга киритасиз. Дарсимиз ҳафтасига 3 маротаба 2 ярим соатдан бўлиб ўтади. Курс давомида 1С 8.3 дастурида қийинчиликсиз ишлай оладиган етук кадр бўлиб, ўқиш сўнгида диплом ҳамда мукаммал иш ўрнига эга бўласиз. Бундан ташқари курс давомида сизга солиқ ҳисоботлари, банк клиент иш давомида керак бўладиган вазифалар ўргатиб борилади. Агарда сиз якка тартибдаги дарсларни хоҳласангиз бизда бу имконият ҳам мавжуд.\n\n       4 ой давомида сиз:\n - Бухгалтерия ҳисоби фани;\n - Корхона қай тартибда очилиши ва ҳужжатларнинг қай тартибда расмийлаштирилиши;\n - Корхона ишининг қандай тартибда амалга оширилиши;\n - Шартномалар;\n - Ҳисоб фактуралар;\n - Икки ёқламали ёзув бўйича бухгалтерия ҳисобини юритиш;\n - Давлат солиқ инспекциясига топширилиши лозим бўлган солиқлар;\n - Барча турдаги корхоналарнинг ойлик, чорак ва йиллик ҳисоботларини ҳисоблаш;\n - Банк клиент, випискалар ва уларни қай тартибда киритилиши каби билим ва кўникмаларга эга бўласиз ҳамда кусрни тамомлаганингиздан сўнг ўқитувчиларимиз билан биргаликда амалиёт ҳам ўташингиз мумкин.</string>

    <string name="named_title">Кодекснинг номи: </string>
    <string name="named_section">Болимниг номи:</string>
    <string name="named_chapter">Мавзунинг номи:</string>

    <string name="about_raqamli_dunyo">

 <b>Raqamli Dunyo МЧЖ</b> нинг асосий фаолияти Тошкент ва Озбекистоннинг бошқа ҳудудларида бизнес ва електрон тижорат учун дастурий та\ъминот ишлаб чиқиш. Бизнинг жамоа оз мижозларига юқори сифатли дастурий та\ъминотларни юқори тезликда йетказибгина қолмай, ҳар бир маҳсулотини ахборот хавфсизлиги ва замонавий дизайн билан кафолатлайди. Малакали дастурчиларимиз тажрибалари евазига яратилган дастурий таминот тизимингизни доим ишончли ишлашини та\ъминлайди.Бизнинг жамоамиз ривожланишга иложи борича ҳар томонлама ёндашади. Биз wеб-портал (форум, елонлар тахтаси, ижтимоий тармоқ) ва корпоратив сайтлар яратиш, интернет дўкон ва каталог сайтларни ишлаб чиқариш билан шуғулланамиз, шунингдек сизнинг бизнесингизни ривожлантирувчи йечимларни лойиҳалаштирамиз. Wеб-студияси очилганидан буён бир неча кичик корхоналар билан бирга катта компаниялар билан ҳам ишлашга улгурди. Бунинг натижасида биз мижозларимизнинг муаммоларини самарали ҳал етиш имконини берувчи усуллар ва технологияларни ишлаб чиқдик. Бу технологиялар, лойиҳалар қанчалик мураккаб болмасин уларни мукаммал даражада охирига йетказади. Лойиҳа аниқ ва олчовли мақсадларни белгилайди. Биз сизнинг бизнесингиз учун ишлайдиган ва савдо қиладиган веб-сайтни яратамиз. Замонавий технологияларни ишлаб чиқишда лойиҳани янада қоллаб-қувватлаш ва ривожлантиришга ёрдам беради.\n\n
 <b>Биз хизмат корсатадиган ё\ъналиш турлари</b>\n
 Мобил иловалар ишлаб чиқиш, Wеб сайтлар яратиш, Компютерлар учун дастурлар тузиш.\n\n
 <b>Нега айнан биз?</b>\n
 Бизда ҳаммаси сиз истагандек. Қулайлик, миллийлик ва замонавийлик уйг\ъунлиги. Биз сизга ёрдам беришга доим тайёрмиз!\n\n
 <b>Иш тизими қандай?</b>\n
 Барчаси жуда оддий! Мижоз билан учрашамиз. Озаро келишамиз ва жуда қисқа муддатда сайтни тайёрлаб берамиз.\n\n
 <b>Ишимизнинг сифати</b>\n
 Бизга топширилган ишлар, албатта, юқори сифатга ега болади - ҳар бир кичик детал мукаммал ва тоғри болади!\n\n
 <b>Қулайлик ва оддийлик</b>\n
 Буюртма берган лойиҳангизга ташриф буюрувчилар ва лойиҳа администратори учун қулай ва тушунарли болган сайт ва бошқарув тизимларини яратамиз. Aҳир мижозлар учун қайғуриш керак емасми?\n\n
 <b>Aлоҳида ёндашув</b>\n
 Ҳар бир мижозга индивидуал ёндашув кафолатланади! Aҳир сизга барча саволларга жавоб берадиган ма\ъсул менежер керакку?\n\n
 <b>Сайтнинг юкланиш тезлиги</b>\n
 Биз яратган лойиҳалар жуда тез ишлайди ва юкланади.\n\n
 <b>Мукаммал тизим</b>\n
 Енг муҳими, биз яратган тизимлар сиз ҳозирги вақтда тоқнаш келган масалаларни йечимини топади: ташкилотингиз ҳақидаги ма\ълумотларни интернетда мукаммал тарзда жойлаштиришдан бошлаб махсулотларингиз ва хизматларингизни сотиш ва янги мижозларни жалб қилишгача.\n\n
 <b>Хамёнбоп нархлар</b>\n
 Ва албатта бизда енг мақбул нархлар. Сиз ексклюзив сайтларни бизда ҳамёнбоп нархларда буюртма беришингиз мумкин.
    </string>

    <string name="adress_company">Тошкент шаҳри, Юнусобод тумани, Шароф Рашидов кўчаси 16-уй</string>

</resources>